--- a/package.json
+++ b/package.json
@@ -29,10 +29,11 @@
         "@fortawesome/fontawesome-free": "5.3.1",
         "bootstrap": "4.1.3",
         "jquery": "3.3.1",
-        "simple-line-icons": "^2.4.1"
+        "simple-line-icons": "^2.4.1",
+        "startbootstrap-scrolling-nav": "^4.1.1"
     },
     "devDependencies": {
-        "browser-sync": "2.24.7",
+        "browser-sync": "^2.26.3",
         "gulp": "^3.9.1",
         "gulp-autoprefixer": "6.0.0",
         "gulp-clean-css": "3.10.0",
